--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,16 @@
     <script>
       (function() {
         const savedTheme = localStorage.getItem('theme');
-        if (savedTheme === 'dark' || (!savedTheme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        if (!savedTheme && window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches) {
           document.documentElement.classList.add('dark');
+          localStorage.setItem('theme', 'dark');
+          console.log('0');
         }
+        else if (savedTheme === 'dark') {
+          document.documentElement.classList.add('dark');
+          console.log('1');
+        }
+
       })();
     </script>
   </head>
