--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,8 @@
         }
         else if (savedTheme === 'dark') {
           document.documentElement.classList.add('dark');
+        } else {
+          document.documentElement.classList.add('light');
         }
 
       })();
